--- a/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
+++ b/complicationsapp/complicationsapp/Base.lproj/Main.storyboard
@@ -314,17 +314,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tLk-TC-EgY">
-                            <size key="itemSize" width="120" height="120"/>
+                            <size key="itemSize" width="120" height="240"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="complication" id="zHQ-1E-LLw" customClass="ComplicationsCollectionViewCell" customModule="complicationsapp" customModuleProvider="target">
-                                <rect key="frame" x="10" y="74" width="120" height="120"/>
+                                <rect key="frame" x="10" y="74" width="120" height="240"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="120" height="240"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eNK-sf-ur9">
@@ -350,15 +350,45 @@
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                         </view>
+                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zrs-6y-1Gb">
+                                            <rect key="frame" x="0.0" y="120" width="120" height="120"/>
+                                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="agY-aP-0Su">
+                                                <size key="itemSize" width="100" height="50"/>
+                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="5"/>
+                                            </collectionViewFlowLayout>
+                                            <cells>
+                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="history" id="4NY-bf-TDB">
+                                                    <rect key="frame" x="10" y="5" width="100" height="50"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                        <rect key="frame" x="0.0" y="0.0" width="100" height="50"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    </view>
+                                                </collectionViewCell>
+                                            </cells>
+                                        </collectionView>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
+                                    <constraint firstItem="zrs-6y-1Gb" firstAttribute="leading" secondItem="zHQ-1E-LLw" secondAttribute="leading" id="84Y-j5-TzG"/>
                                     <constraint firstItem="eNK-sf-ur9" firstAttribute="leading" secondItem="zHQ-1E-LLw" secondAttribute="leading" id="B2C-yl-3P9"/>
+                                    <constraint firstAttribute="trailing" secondItem="zrs-6y-1Gb" secondAttribute="trailing" id="IDZ-iH-wEC"/>
                                     <constraint firstAttribute="bottom" secondItem="eNK-sf-ur9" secondAttribute="bottom" id="RXa-mD-O1e"/>
                                     <constraint firstItem="eNK-sf-ur9" firstAttribute="top" secondItem="zHQ-1E-LLw" secondAttribute="top" id="bJH-Bo-Mv4"/>
+                                    <constraint firstAttribute="bottom" secondItem="zrs-6y-1Gb" secondAttribute="bottom" id="i4Q-rA-Pgz"/>
+                                    <constraint firstItem="zrs-6y-1Gb" firstAttribute="top" secondItem="eNK-sf-ur9" secondAttribute="bottom" id="oES-Gp-roL"/>
+                                    <constraint firstItem="zrs-6y-1Gb" firstAttribute="height" secondItem="eNK-sf-ur9" secondAttribute="height" id="olJ-ho-py6"/>
                                     <constraint firstAttribute="trailing" secondItem="eNK-sf-ur9" secondAttribute="trailing" id="r5A-5x-zHF"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="RXa-mD-O1e"/>
+                                    </mask>
+                                </variation>
                                 <connections>
                                     <outlet property="complicationCellColorView" destination="eNK-sf-ur9" id="Kxf-Qt-fLx"/>
                                     <outlet property="complicationLabel" destination="Mt1-Fc-t96" id="H5K-7g-R82"/>
